# CustomOperatorSamples

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
CHOP/: Examples.2.toe
CHOP/Backup/: Examples.1.toe
CHOP/BasicFilterCHOP/: BasicFilterCHOP.cpp  BasicFilterCHOP.h  BasicFilterCHOP.sln  BasicFilterCHOP.vcxproj  CHOP_CPlusPlusBase.h  CMakeLists.txt  Parameters.cpp  Parameters.h  README.md
CHOP/BasicGeneratorCHOP/: BasicGeneratorCHOP.cpp  BasicGeneratorCHOP.h  BasicGeneratorCHOP.sln  BasicGeneratorCHOP.vcxproj  CMakeLists.txt  Parameters.cpp  Parameters.h  README.md
CHOP/OneEuroCHOP/: CHOP_CPlusPlusBase.h  CMakeLists.txt  OneEuroCHOP.cpp  OneEuroCHOP.h  OneEuroCHOP.sln  OneEuroCHOP.vcxproj  OneEuroImpl.cpp  OneEuroImpl.h  Parameters.cpp  Parameters.h  README.md
CHOP/TimeSliceFilterCHOP/: CHOP_CPlusPlusBase.h  CMakeLists.txt  Parameters.cpp  Parameters.h  README.md  TimeSliceFilterCHOP.cpp  TimeSliceFilterCHOP.h  TimeSliceFilterCHOP.sln  TimeSliceFilterCHOP.vcxproj
CHOP/TimeSliceGeneratorCHOP/: CMakeLists.txt  Parameters.cpp  Parameters.h  README.md  TimeSliceGeneratorCHOP.cpp  TimeSliceGeneratorCHOP.h  TimeSliceGeneratorCHOP.sln  TimeSliceGeneratorCHOP.vcxproj
DAT/FilterDAT/: .gitignore  CMakeLists.txt  FilterDAT.cpp  FilterDAT.h  FilterDAT.sln  FilterDAT.vcxproj  Parameters.cpp  Parameters.h  README.md
DAT/GeneratorDAT/: CMakeLists.txt  DATGenerator.vcxproj  DAT_CPlusPlusBase.h  GeneratorDAT.cpp  GeneratorDAT.h  GeneratorDAT.sln  Parameters.cpp  Parameters.h  README.md
SOP/FilterSOP/: CMakeLists.txt  FilterSOP.cpp  FilterSOP.h  FilterSOP.sln  FilterSOP.vcxproj  Parameters.cpp  Parameters.h  README.md  SOP_CPlusPlusBase.h
SOP/GeneratorSOP/: CMakeLists.txt  GeneratorSOP.cpp  GeneratorSOP.h  GeneratorSOP.sln  GeneratorSOP.vcxproj  Parameters.cpp  Parameters.h  README.md  ShapeGenerator.cpp  ShapeGenerator.h
SOP/GeneratorSOP/voronoi/: cell.cc  common.hh
SOP/IntersectPointsSOP/: CMakeLists.txt  CPlusPlus_Common.h  IntersectPointsSOP.cpp  IntersectPointsSOP.h  IntersectPointsSOP.sln  IntersectPointsSOP.vcxproj  Parameters.cpp  Parameters.h  README.md
SOP/SpiralSOP/: CMakeLists.txt  CPlusPlus_Common.h  Parameters.cpp  Parameters.h  README.md  SOP_CPlusPlusBase.h  SpiralSOP.cpp  SpiralSOP.h  SpiralSOP.sln  SpiralSOP.vcxproj
SOP/SprinkleSOP/: CMakeLists.txt  Parameters.cpp  Parameters.h  README.md  RandomPointsBuffer.cpp  RandomPointsBuffer.h  SprinkleSOP.cpp  SprinkleSOP.h  SprinkleSOP.sln  SprinkleSOP.vcxproj  VolSprinkleTree.cpp  VolSprinkleTree.h
SOP/WrapPointsSOP/: CMakeLists.txt  CPlusPlus_Common.h  Parameters.cpp  Parameters.h  README.md  WrapPointsSOP.cpp  WrapPointsSOP.h  WrapPointsSOP.sln  WrapPointsSOP.vcxproj
TOP/BasicFilterTOP/: BasicFilterTOP.cpp  BasicFilterTOP.h  BasicFilterTOP.sln  BasicFilterTOP.vcxproj  CMakeLists.txt  FilterWork.cpp  FilterWork.h  Parameters.cpp  Parameters.h  README.md  TOP_CPlusPlusBase.h  ThreadManager.cpp  ThreadManager.h
TOP/CPUMemoryTOP/: CPUMemoryTOP.cpp  CPUMemoryTOP.h  CPUMemoryTOP.sln  CPUMemoryTOP.vcxproj  FrameQueue.cpp  FrameQueue.h  Parameters.cpp  Parameters.h  README.md
TOP/CPUMemoryTOP/CPUMemoryTOP.xcodeproj/: project.pbxproj
TOP/CPUMemoryTOP/CPUMemoryTOP.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
TOP/CPUMemoryTOP/CPUMemoryTOP.xcodeproj/xcshareddata/xcschemes/: CPUMemoryTOP.xcscheme
TOP/CannyEdgeTOP/: CannyEdgeTOP.cpp  CannyEdgeTOP.h  CannyEdgeTOP.sln  CannyEdgeTOP.vcxproj  GpuUtils.cu  GpuUtils.cuh  Parameters.cpp  Parameters.h  README.md
TOP/ContoursTOP/: ContoursTOP.cpp  ContoursTOP.h  ContoursTOP.sln  ContoursTOP.vcxproj  Parameters.cpp  Parameters.h  README.md
TOP/CudaTOP/: CudaTOP.cpp  CudaTOP.h  CudaTOP.sln  CudaTOP.vcxproj  Parameters.cpp  Parameters.h  README.md  kernel.cu
TOP/DistanceTransformTOP/: CMakeLists.txt  CPlusPlus_Common.h  DistanceTransformTOP.cpp  DistanceTransformTOP.h  DistanceTransformTOP.sln  DistanceTransformTOP.vcxproj  Parameters.cpp  Parameters.h  README.md
TOP/ONNXCandyStyleTOP/: CPlusPlus_Common.h  ONNXCandyStyleTOP.cpp  ONNXCandyStyleTOP.h  ONNXCandyStyleTOP.sln  ONNXCandyStyleTOP.vcxproj  README.md  kernel.cu
TOP/ObjectDetectorTOP/: CMakeLists.txt  ObjectDetectorTOP.cpp  ObjectDetectorTOP.h  ObjectDetectorTOP.sln  ObjectDetectorTOP.vcxproj  Parameters.cpp  Parameters.h  README.md
TOP/OpenGLTOP/: CPlusPlus_Common.h  GL_Extensions.h  Matrix.cpp  Matrix.h  OpenGLTOP.cpp  OpenGLTOP.h  OpenGLTOP.sln  OpenGLTOP.vcxproj  Parameters.cpp  Parameters.h  Program.cpp  Program.h  README.md  Shape.cpp  Shape.h
TOP/OpenGLTOP/OpenGLTOP.xcodeproj/: project.pbxproj
TOP/OpenGLTOP/OpenGLTOP.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
TOP/OpenGLTOP/OpenGLTOP.xcodeproj/xcshareddata/xcschemes/: OpenGLTOP.xcscheme
TOP/OpticalFlowCPUTOP/: CPlusPlus_Common.h  OpticalFlowCPUTOP.cpp  OpticalFlowCPUTOP.h  OpticalFlowCPUTOP.sln  OpticalFlowCPUTOP.vcxproj  Parameters.cpp  Parameters.h  README.md
TOP/OpticalFlowGPUTOP/: .TOPOpticalFlowFarnebackGPU.vcxproj.swp  OpticalFlowGPUTOP.cpp  OpticalFlowGPUTOP.h  OpticalFlowGPUTOP.sln  OpticalFlowGPUTOP.vcxproj  Parameters.cpp  Parameters.h  README.md  kernel.cu
TOP/SpectrumTOP/: GpuUtils.cu  GpuUtils.cuh  Parameters.cpp  Parameters.h  README.md  SpectrumTOP.cpp  SpectrumTOP.h  SpectrumTOP.sln  SpectrumTOP.vcxproj
